unpackaged/main/default/objects/TimeSheetEntry/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>