unpackaged/main/default/objects/TimeSheetEntry/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <inlineHelpText>Fill in the persons name</inlineHelpText>
    <label>Technician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>